<resources>

    <string name="app_name">ReLearn</string>
    <string name="title_home">Home</string>
    <string name="title_Tasks">Tasks</string>
    <string name="title_ZenZone">Zen Zone</string>
    <string name="settings">Settings</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="pre_simple_ui">Pref Simple UI</string>
    <string name="pre_fancy_ui">Pref Fancy UI</string>
    <string name="sample_text">This is some sample text</string>




    <string name="main_activity_name">All Tasks</string>
    <string name="add_task_activity_name">Add a New Task</string>

    <!-- Strings for MainActivity -->
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>

    <!-- Strings for AddTaskActivity -->
    <!-- This edit task has a unicode character for "..." = "&#8230;" -->
    <string name="edit_task_description">Describe your task&#8230;</string>
    <string name="priority_string">Priority</string>

    <string name="high_priority">High</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>

    <string name="add_button">Add</string>
</resources>