<?xml version="1.0" encoding="utf-8"?>
<!--
    This vertical linear layout contains all the views in the AddTaskActivity code.
    This includes an EditText to add a task description, and buttons to select a priority
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lowrestask">

    <!-- EditText for getting task description input -->
    <EditText
        android:id="@+id/editTextTaskDescription"
        android:backgroundTint="@color/cardview_light_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/edit_task_description"
        android:textColorHint="@color/white"

        app:fontFamily="orbitron"/>

    <!-- TextView and FrameLayout (which contains buttons) for Priority Selection -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textColor="@color/colorPrimaryLight"
        style="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/priority_string"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        app:fontFamily="orbitron" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Linear layout that contains all three priority buttons (high, medium, low)
        in a single line -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:weightSum="3">

            <Button
                android:textColor="@color/materialRed"
                android:id="@+id/buttonP1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/materialRed"
                android:text="@string/high_priority"
                android:layout_weight="1"
                android:onClick="onPrioritySelected"

                app:fontFamily="orbitron"/>

            <Button

                android:textColor="@color/materialOrange"
                android:id="@+id/buttonP2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/materialOrange"
                android:text="@string/med_priority"
                android:layout_weight="1"
                android:onClick="onPrioritySelected"
                app:fontFamily="orbitron"/>

            <Button

                android:textColor="@color/materialYellow"
                android:id="@+id/buttonP3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/materialYellow"
                android:text="@string/low_priority"
                android:layout_weight="1"
                android:onClick="onPrioritySelected"
                app:fontFamily="orbitron"/>

        </LinearLayout>

        <!-- RadioGroup for visible selection of a priority -->
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:weightSum="3">

            <RadioButton
                android:id="@+id/radButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onPrioritySelected"
                android:layout_weight="1"
                android:theme="@style/WhiteRadioButton"/>

            <RadioButton
                android:id="@+id/radButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onPrioritySelected"
                android:layout_weight="1"
                android:theme="@style/WhiteRadioButton"/>

            <RadioButton
                android:id="@+id/radButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onPrioritySelected"
                android:layout_weight="1"
                android:theme="@style/WhiteRadioButton"/>

        </RadioGroup>

    </FrameLayout>

    <!-- Add button -->
    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_button"
        style="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/primary_text_dark"
        android:background="@color/colorPrimary"
        android:onClick="onClickAddTask"
        android:textStyle="bold"
        app:fontFamily="orbitron"/>

</LinearLayout>